k8s/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chatwoot-development
  labels:
    name: chatwoot-development
