k8s/development/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatwoot-sidekiq-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatwoot-sidekiq-development
  template:
    metadata:
      labels:
        app: chatwoot-sidekiq-development
    spec:
      containers:
      - name: sidekiq
        image: wavai/chatwoot-rails-dev:v1.0.42
        imagePullPolicy: Always
        command: ["/bin/sh"]
        args: ["-c", "bundle exec sidekiq -C config/sidekiq.yml"]
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
